DR-2031 Handle field delimiter and quote characters for CSV (#1055)
* handle field delimiter and quote characters for CSV

* Move validation to request processing instead of flight