@@ -25,7 +25,6 @@ import com.azure.storage.blob.BlobUrlParts;
 import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
-import java.util.Optional;
 import java.util.UUID;
 import org.junit.After;
 import org.junit.Before;
@@ -134,7 +133,7 @@ public class AzureSynapsePdaoConnectedTest {
       logger.info("Unable to delete parquet files.");
     }
 
-    azureSynapsePdao.dropTables(Arrays.asList(tableName));
+    azureSynapsePdao.dropTables(List.of(tableName));
     azureSynapsePdao.dropDataSources(
         Arrays.asList(destinationDataSourceName, ingestRequestDataSourceName));
     azureSynapsePdao.dropScopedCredentials(
@@ -153,6 +152,28 @@ public class AzureSynapsePdaoConnectedTest {
             testConfig.getIngestRequestContainer(),
             "azure-simple-dataset-ingest-request.csv");
     testSynapseQuery(ingestRequestModel, ingestFileLocation);
+  }
+
+  @Test
+  public void testSynapseQueryNonStandardCSV() throws Exception {
+    IngestRequestModel nonStandardIngestRequestModel =
+        new IngestRequestModel()
+            .format(FormatEnum.CSV)
+            .csvSkipLeadingRows(2)
+            .csvFieldDelimiter("!")
+            .csvQuote("*");
+    String nonStandardIngestFileLocation =
+        synapseUtils.ingestRequestURL(
+            testConfig.getSourceStorageAccountName(),
+            testConfig.getIngestRequestContainer(),
+            "azure-simple-dataset-ingest-request-non-standard.csv");
+    testSynapseQuery(nonStandardIngestRequestModel, nonStandardIngestFileLocation);
+
+    List<String> textCols =
+        synapseUtils.readParquetFileStringColumn(
+            destinationParquetFile, destinationDataSourceName, "textCol", true);
+    assertThat(
+        "The text columns should be properly quoted", textCols, equalTo(List.of("Dao!", "Jones!")));
   }
 
   @Test
@@ -211,7 +232,9 @@ public class AzureSynapsePdaoConnectedTest {
             destinationDataSourceName,
             ingestRequestDataSourceName,
             tableName,
-            Optional.ofNullable(ingestRequestModel.getCsvSkipLeadingRows()));
+            ingestRequestModel.getCsvSkipLeadingRows(),
+            ingestRequestModel.getCsvFieldDelimiter(),
+            ingestRequestModel.getCsvQuote());
     assertThat("num rows updated is two", updateCount, equalTo(2));
 
     // Check that the parquet files were successfully created.
@@ -219,7 +242,7 @@ public class AzureSynapsePdaoConnectedTest {
         synapseUtils.readParquetFileStringColumn(
             destinationParquetFile, destinationDataSourceName, "first_name", true);
     assertThat(
-        "List of names should equal the input", firstNames, equalTo(Arrays.asList("Bob", "Sally")));
+        "List of names should equal the input", firstNames, equalTo(List.of("Bob", "Sally")));
 
     // 4 - clean out synapse
     // we'll do this in the test cleanup method, but it will be a step in the normal flight
